[package]
name = "pi-rmf69"
version = "0.1.0"
authors = ["David Kleingeld <dskleingeld@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.2"
bitflags = "1.0.4"

# Dev-dependencies are not used when compiling a package for building, 
# but are used for compiling tests, examples, and benchmarks.
[dev-dependencies]
linux-embedded-hal = "0.2.2"